pipeline: update runtime_parties to all cpn and adjust data upload interface
Signed-off-by: mgqa34 <mgq3374541@163.com>

--- a/python/fate_client/pipeline/component_define/fate/reader.yaml
+++ b/python/fate_client/pipeline/component_define/fate/reader.yaml
@@ -34,7 +34,7 @@ component:
     model: {}
   output_artifacts:
     data:
-      data_output:
+      output_data:
         types:
           - data_unresolved
         optional: false
