pipeline: fix code to support using bfia components
Signed-off-by: mgqa34 <mgq3374541@163.com>

--- a/python/fate_client/pipeline/adapters/bfia/component_define/unionpay/intersection.yaml
+++ b/python/fate_client/pipeline/adapters/bfia/component_define/unionpay/intersection.yaml
@@ -113,7 +113,7 @@ component:
       description: 是否使用哈希
       optional: true
       type: string
-  provider: FATE
+  provider: unionpay
   roles:
   - guest
   - host
