Signed-off-by: weijingchen <talkingwallace@sohu.com>
update config & hetero-nn path bind

Signed-off-by: cwj <talkingwallace@sohu.com>

--- a/python/fate_client/pipeline/component_define/fate/hetero_nn.yaml
+++ b/python/fate_client/pipeline/component_define/fate/hetero_nn.yaml
@@ -53,6 +53,7 @@ component:
       train_data:
         types:
           - dataframe
+          - data_directory
         optional: false
         stages:
           - train
@@ -64,6 +65,7 @@ component:
       validate_data:
         types:
           - dataframe
+          - data_directory
         optional: true
         stages:
           - train
@@ -75,6 +77,7 @@ component:
       test_data:
         types:
           - dataframe
+          - data_directory
         optional: false
         stages:
           - predict
