--- a/python/fate_client/pipeline/component_define/fate/data_split.yaml
+++ b/python/fate_client/pipeline/component_define/fate/data_split.yaml
@@ -2,7 +2,7 @@ component:
   name: data_split
   description: ''
   provider: fate
-  version: 2.0.0-rc
+  version: 2.0.0
   labels: [ ]
   roles:
     - guest
