--- a/python/fate_client/pipeline/component_define/fate/feature_scale.yaml
+++ b/python/fate_client/pipeline/component_define/fate/feature_scale.yaml
@@ -2,7 +2,7 @@ component:
   name: feature_scale
   description: ''
   provider: fate
-  version: 2.0.0-rc
+  version: 2.0.0
   labels: []
   roles:
     - guest
