--- a/python/fate_client/pipeline/component_define/fate/sshe_linr.yaml
+++ b/python/fate_client/pipeline/component_define/fate/sshe_linr.yaml
@@ -2,7 +2,7 @@ component:
   name: sshe_linr
   description: ''
   provider: fate
-  version: 2.0.0-rc
+  version: 2.0.0
   labels: [ ]
   roles:
     - guest
