pipeline: add engine to bfia components
Signed-off-by: mgqa34 <mgq3374541@163.com>

--- a/python/fate_client/pipeline/adapters/bfia/component_define/unionpay/hetero_lr.yaml
+++ b/python/fate_client/pipeline/adapters/bfia/component_define/unionpay/hetero_lr.yaml
@@ -120,6 +120,11 @@ component:
       description: 最小损失值
       optional: true
       type: float
+    connect_engine:
+      default: "mesh"
+      description: 通信引擎
+      optional: true
+      type: str
   provider: unionpay
   roles:
   - guest
