--- a/python/fate_client/pipeline/adapters/bfia/component_define/unionpay/hetero_secureboost.yaml
+++ b/python/fate_client/pipeline/adapters/bfia/component_define/unionpay/hetero_secureboost.yaml
@@ -157,6 +157,11 @@ component:
       description: 树参数
       optional: true
       type: string
+    connect_engine:
+      default: "mesh"
+      description: 通信引擎
+      optional: true
+      type: str
   provider: unionpay
   roles:
   - guest
