--- a/python/fate_client/pipeline/component_define/fate/hetero_nn.yaml
+++ b/python/fate_client/pipeline/component_define/fate/hetero_nn.yaml
@@ -2,7 +2,7 @@ component:
   name: hetero_nn
   description: ''
   provider: fate
-  version: 2.0.0-beta
+  version: 2.0.0
   labels: []
   roles:
     - guest
@@ -155,4 +155,3 @@ component:
         description: metric, invisible for user
         is_multi: false
 schema_version: v1
-
