--- a/python/fate_client/pipeline/component_define/fate/homo_nn.yaml
+++ b/python/fate_client/pipeline/component_define/fate/homo_nn.yaml
@@ -2,7 +2,7 @@ component:
   name: homo_nn
   description: ''
   provider: fate
-  version: 2.0.0-beta
+  version: 2.0.0
   labels: []
   roles:
     - guest
@@ -156,4 +156,3 @@ component:
         description: metric, invisible for user
         is_multi: false
 schema_version: v1
-
