--- a/python/fate_client/pipeline/component_define/fate/reader.yaml
+++ b/python/fate_client/pipeline/component_define/fate/reader.yaml
@@ -2,7 +2,7 @@ component:
   name: reader
   description: ''
   provider: fate
-  version: 2.0.0-beta
+  version: 2.0.0
   labels: []
   roles:
     - guest
