--- a/python/fate_client/pipeline/component_define/fate/dataframe_transformer.yaml
+++ b/python/fate_client/pipeline/component_define/fate/dataframe_transformer.yaml
@@ -2,7 +2,7 @@ component:
   name: dataframe_transformer
   description: ''
   provider: fate
-  version: 2.0.0-beta
+  version: 2.0.0
   labels: []
   roles:
     - local
@@ -83,3 +83,4 @@ component:
         description: metric, invisible for user
         is_multi: false
 schema_version: v1
+
