--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -4,7 +4,7 @@ pandas==2.0.3
 psutil==5.9.5
 requests<2.26.0
 requests_toolbelt==0.9.1
-ruamel.yaml==0.16
+ruamel-yaml==0.16
 setuptools
 networkx
 pydantic==1.10.12
