support distribution of source.yaml for homo-nn
Signed-off-by: mgqa34 <mgq3374541@163.com>

--- a/python/MANIFEST.in
+++ b/python/MANIFEST.in
@@ -1,3 +1,4 @@
 include fate_client/pipeline/component_define/fate/*.yaml
 include fate_client/pipeline/*.yaml
 include fate_client/*.yaml
+include fate_client/pipeline/components/fate/nn/*.yaml
