--- a/python/fate_client/pipeline/component_define/fate/homo_nn.yaml
+++ b/python/fate_client/pipeline/component_define/fate/homo_nn.yaml
@@ -88,7 +88,7 @@ component:
         description: ''
         is_multi: false
     model:
-      train_model_input:
+      warm_start_model:
         types:
           - model_directory
         optional: true
@@ -99,7 +99,7 @@ component:
           - host
         description: ''
         is_multi: false
-      predict_model_input:
+      input_model:
         types:
           - model_directory
         optional: false
@@ -112,7 +112,7 @@ component:
         is_multi: false
   output_artifacts:
     data:
-      train_data_output:
+      train_output_data:
         types:
           - dataframe
         optional: true
@@ -123,7 +123,7 @@ component:
           - host
         description: ''
         is_multi: false
-      predict_data_output:
+      test_output_data:
         types:
           - dataframe
         optional: true
@@ -135,7 +135,7 @@ component:
         description: ''
         is_multi: false
     model:
-      train_model_output:
+      output_model:
         types:
           - model_directory
         optional: true
@@ -156,3 +156,4 @@ component:
         description: metric, invisible for user
         is_multi: false
 schema_version: v1
+
