rename union input: input data list --> input datas edit doc
Signed-off-by: Yu Wu <yolandawu131@gmail.com>

--- a/python/fate_client/pipeline/component_define/fate/union.yaml
+++ b/python/fate_client/pipeline/component_define/fate/union.yaml
@@ -10,7 +10,7 @@ component:
   parameters: { }
   input_artifacts:
     data:
-      input_data_list:
+      input_datas:
         types:
           - dataframe
         optional: false
