update evaluation Signed-off-by: weijingchen <talkingwallace@sohu.com>
Signed-off-by: cwj <talkingwallace@sohu.com>

--- a/python/fate_client/pipeline/component_define/fate/evaluation.yaml
+++ b/python/fate_client/pipeline/component_define/fate/evaluation.yaml
@@ -54,7 +54,7 @@ component:
           use 'label' in the input dataframe
   input_artifacts:
     data:
-      input_data:
+      input_datas:
         types:
           - dataframe
         optional: false
@@ -82,3 +82,4 @@ component:
         description: metric, invisible for user
         is_multi: false
 schema_version: v1
+
