Update nn yaml Signed-off-by: weijingchen <talkingwallace@sohu.com>
Signed-off-by: cwj <talkingwallace@sohu.com>

--- a/python/fate_client/pipeline/component_define/fate/homo_nn.yaml
+++ b/python/fate_client/pipeline/component_define/fate/homo_nn.yaml
@@ -144,6 +144,7 @@ component:
         roles:
           - guest
           - host
+          - arbiter
         description: ''
         is_multi: false
     metric:
